# Vine

./: .clang-format  .clangd  .gitignore  .gitignore.bak  CMakeLists.txt  _vcpkg.json  vcpkg.json
docs/: CNAME  (+1 more)
src/: CMakeLists.txt
src/app/: CMakeLists.txt
src/app/src/: main.cpp
src/appfw/: Addin.cpp  AddinLoadContext.cpp  AddinManager.cpp  Application.cpp  CMakeLists.txt  Command.cpp  CommandManager.cpp  ServiceManager.cpp  UserIO.cpp  application.cpp
src/appfw/gui/: CMakeLists.txt  Control.cpp  Convert.cpp  Convert.h  DockPanel.cpp  GuiApplication.cpp  MainWindow.cpp  Point.cpp  Rect.cpp  RibbonBar.cpp  RibbonDropDownItem.cpp  RibbonGallery.cpp  RibbonGroup.cpp  RibbonMenuItem.cpp  RibbonTab.cpp  Size.cpp  StatusBar.cpp  ThirdParty.cpp  UIElement.cpp  VisualUserIO.cpp  VisualUserIO.h
src/base/: CMakeLists.txt
src/base/core/: CMakeLists.txt
src/base/core/deprecated/: String.cpp  String.hpp
src/base/core/sdk/vine/: Char.hpp  Class.hpp  Events.hpp  Exception.hpp  Inherit.hpp  Object.hpp  Platform.hpp  Ptr.hpp  RefObject.hpp  Signal.hpp  String.hpp  core_global.hpp  stl++.hpp
src/base/core/src/vine/: Class.cpp  Events.cpp  Exception.cpp  Inherit.cpp  Object.cpp  RefObject.cpp  String.cpp  stl++.cpp
src/base/geometry/: CMakeLists.txt
src/base/geometry/sdk/vine/geometry/: BrepShape.hpp  MeshShape.hpp  Primitive.hpp  Shape.hpp  geometry_global.hpp
src/base/geometry/src/vine/geometry/: BrepShape.cpp  MeshShape.cpp  Primitive.cpp  Shape.cpp
src/base/global/: CMakeLists.txt
src/base/global/sdk/vine/: vi_global.hpp
src/base/math/: CMakeLists.txt
src/base/math/include/vine/math/: Comm.hpp
src/base/math/sdk/vine/math/: Line.hpp  Math.hpp  Matrix4x4.hpp  Plane.hpp  Point2.hpp  Point3.hpp  Quaternion.hpp  Rect2.hpp  Rect3.hpp  Types.hpp  Vector2.hpp  Vector3.hpp  Vector4.hpp  math_global.hpp
src/base/math/src/vine/math/: Line.cpp  Math.cpp  Matrix4x4.cpp  Plane.cpp  Point2.cpp  Point3.cpp  Quaternion.cpp  Rect2.cpp  Rect3.cpp  Vector2.cpp  Vector3.cpp  Vector4.cpp
src/base/runtime/: CMakeLists.txt
src/base/runtime/sdk/vine/runtime/: CacheManager.hpp  Runtime.hpp  runtime_global.hpp
src/base/runtime/src/vine/runtime/: Runtime.cpp
src/base/system/: CMakeLists.txt
src/base/system/sdk/vine/system/: OperationSystem.hpp  Process.hpp  system_global.hpp
src/base/system/src/vine/system/: OperationSystem.cpp  Process.cpp
src/core/: CMakeLists.txt  Class.cpp  Events.cpp  Exception.cpp  Inherit.cpp  Object.cpp  String.cpp  core_stl.cpp  stl++.cpp
src/di/: CMakeLists.txt  Container.cpp  Registration.cpp
src/etd/: CMakeLists.txt  main.cpp
src/fw/: CMakeLists.txt
src/fw/appfw/: CMakeLists.txt
src/fw/appfw/sdk/vine/appfw/: Addin.hpp  AddinLoadContext.hpp  AddinManager.hpp  Application.hpp  Command.hpp  CommandManager.hpp  ServiceManager.hpp  UserIO.hpp  appfw_global.hpp
src/fw/appfw/src/vine/appfw/: Addin.cpp  AddinLoadContext.cpp  AddinManager.cpp  Application.cpp  Command.cpp  CommandManager.cpp  ServiceManager.cpp  UserIO.cpp
src/fw/di/: CMakeLists.txt
src/fw/di/include/vine/di/: ContainerPrivate.hpp  Registration_p.hpp
src/fw/di/sdk/vine/di/: Container.hpp  Lifetime.hpp  Registration.hpp  di_global.hpp
src/fw/di/src/vine/di/: Container.cpp  Registration.cpp  Registration_p.cpp
src/ge/: CMakeLists.txt  Line.cpp  Line2d.cpp  Line3d.cpp  Matrix2d.cpp  Matrix3d.cpp  Matrix3x3.cpp  Matrix4x4.cpp  Plane.cpp  Point2d.cpp  Point2i.cpp  Point3d.cpp  Quaternion.cpp  Rect2d.cpp  Rect2i.cpp  Vector2d.cpp  Vector2i.cpp  Vector3d.cpp
src/graphics/: CMakeLists.txt  Drawable.cpp  Geometry.cpp  Scene.cpp  View.cpp
src/runtime/: CMakeLists.txt  Runtime.cpp
src/system/: CMakeLists.txt  OperationSystem.cpp  Process.cpp
src/vine/: CMakeLists.txt  main.cpp
src/vine/app/: CMakeLists.txt  main.cpp
src/vine/appfw/: Addin.cpp  AddinLoadContext.cpp  AddinManager.cpp  Application.cpp  CMakeLists.txt  Command.cpp  CommandManager.cpp  ServiceManager.cpp  UserIO.cpp
src/vine/appfw/gui/: CMakeLists.txt  Control.cpp  Convert.cpp  Convert.h  Convert.hpp  DockPanel.cpp  GuiApplication.cpp  MainWindow.cpp  RibbonBar.cpp  RibbonDropDownItem.cpp  RibbonGallery.cpp  RibbonGroup.cpp  RibbonTab.cpp  StatusBar.cpp  UIElement.cpp  VisualUserIO.cpp  VisualUserIO.h  VisualUserIO.hpp
src/vine/core/: CMakeLists.txt  Class.cpp  Events.cpp  Exception.cpp  Inherit.cpp  Object.cpp  RefObject.cpp  String.cpp  stl++.cpp
src/vine/di/: CMakeLists.txt  Container.cpp  Registration.cpp  Registration_p.cpp  Registration_p.h  Registration_p.hpp
src/vine/ge/: CMakeLists.txt  Comm.h  Comm.hpp  Line.cpp  Math.cpp  Matrix3x3.cpp  Matrix4x4.cpp  Matrixd3x3.cpp  Matrixd4x4.cpp  Plane.cpp  Point2.cpp  Point2d.cpp  Point2f.cpp  Point2i.cpp  Point3.cpp  Point3d.cpp  Point3f.cpp  Quaternion.cpp  Rect2.cpp  Rect2d.cpp  Rect2i.cpp  Rect3.cpp  Vector.cpp  Vector2.cpp  Vector2d.cpp  Vector2f.cpp  Vector2i.cpp  Vector3.cpp  Vector3d.cpp  Vector3f.cpp  Vector4.cpp  Vector4d.cpp  Vector4f.cpp
src/vine/graphics/: CMakeLists.txt  Drawable.cpp  Geometry.cpp  Scene.cpp  View.cpp
src/vine/math/: CMakeLists.txt  Math.cpp  Matrix4x4.cpp  Plane.cpp  Point2.cpp  Point3.cpp  Quaternion.cpp  Rect2.cpp  Vector2.cpp  Vector3.cpp  Vector4.cpp
src/vine/runtime/: CMakeLists.txt  Runtime.cpp
src/vine/system/: CMakeLists.txt  OperationSystem.cpp  Process.cpp
src/viz/graphics/: CMakeLists.txt
src/viz/graphics/sdk/vine/graphics/: Drawable.hpp  Geometry.hpp  Scene.hpp  View.hpp  graphics_global.hpp
src/viz/graphics/src/vine/graphics/: Drawable.cpp  Geometry.cpp  Scene.cpp  View.cpp
tests/: CMakeLists.txt
tests/getest/: CMakeLists.txt  Matrix3dTest.cpp  Vector3dTest.cpp
tests/test_core/: CMakeLists.txt  SignalTest.cpp  StringTest.cpp
tests/test_cppstd/: CMakeLists.txt  DefaultConstructorsAndOperatorsTest.cpp  ForwardDeclarationTest.cpp  NumCast.cpp  PointerCastTest.cpp
tests/test_ge/: CMakeLists.txt  Matrix4x4Test.cpp  MatrixTest.cpp  RectTest.cpp  Vector3dTest.cpp  VectorTest.cpp
tests/test_math/: CMakeLists.txt  MatrixTest.cpp  QuaternionTest.cpp  RectTest.cpp  VectorTest.cpp
(+277 files in other folders)
