set(CURRENT_LIB_NAME Etd)

file(GLOB SRC_FILE_LIST LIST_DIRECTORIES false *.cpp)
file(GLOB HEADER_FILE_LIST LIST_DIRECTORIES false *.h)
file(GLOB RC_FILE_LIST LIST_DIRECTORIES false *.rc)

find_package(Qt6 REQUIRED COMPONENTS Core Gui Widgets)
qt_standard_project_setup()

add_executable(${CURRENT_LIB_NAME} ${SRC_FILE_LIST} ${HEADER_FILE_LIST} ${RC_FILE_LIST})
set_target_properties(${CURRENT_LIB_NAME} PROPERTIES OUTPUT_NAME_DEBUG ${CURRENT_LIB_NAME}d)
set_target_properties(${CURRENT_LIB_NAME} PROPERTIES OUTPUT_NAME_Release ${CURRENT_LIB_NAME})
# set_target_properties(${CURRENT_LIB_NAME} PROPERTIES WIN32_EXECUTABLE TRUE)