find_package(Qt6 REQUIRED COMPONENTS Core Gui Widgets Svg)

qt_standard_project_setup()

vi_add_library(APPFWGUI_TARGET_NAME AppfwGui)

set_target_properties(${APPFWGUI_TARGET_NAME} PROPERTIES
    AUTOMOC ON
    AUTOUIC ON
    AUTORCC ON
)

set(CMAKE_AUTORCC ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTOUIC ON)

file(GLOB THIRD_SARIBBON_SRC_FILE_LIST ${THIRD_SARIBBON_ROOT}/*.cpp)
#file(GLOB THIRD_SARIBBON_RES_FILE_LIST ${THIRD_SARIBBON_ROOT}/*.qrc)

#qt_add_resources(THIRD_SARIBBON_QT_RES_LIST ${THIRD_SARIBBON_RES_FILE_LIST})

target_sources(${APPFWGUI_TARGET_NAME} PRIVATE ${THIRD_SARIBBON_SRC_FILE_LIST} )
#source_group(qres FILES ${THIRD_SARIBBON_QT_RES_LIST})

target_include_directories(${APPFWGUI_TARGET_NAME} PRIVATE ${THIRD_SARIBBON_ROOT})
target_link_libraries(${APPFWGUI_TARGET_NAME} PRIVATE Qt6::Core Qt6::Gui Qt6::Widgets PUBLIC vi::Ge vi::Core vi::Appfw)

target_compile_definitions(${APPFWGUI_TARGET_NAME} PUBLIC VI_APPFWGUI_IMPL_QT)